force-app/main/default/objects/Account/fields/EnderecoEstado__c.field-meta.xml
<CustomField>
    <fullName>EnderecoEstado__c</fullName>
    <label>Estado do Endereço</label>
    <length>2</length>
    <type>Text</type>
</CustomField>