force-app/main/default/objects/Account/fields/EnderecoNumero__c.field-meta.xml
<CustomField>
    <fullName>EnderecoNumero__c</fullName>
    <label>Número do Endereço</label>
    <length>10</length>
    <type>Text</type>
</CustomField>