force-app/main/default/objects/Account/fields/QualificacaoCliente__c.field-meta.xml
<CustomField>
    <fullName>QualificacaoCliente__c</fullName>
    <label>Qualificação do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Ouro</fullName>
            </value>
            <value>
                <fullName>Prata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>