force-app/main/default/objects/Account/validationRules/CheckTamanhoCEP.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTamanhoCEP</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    NOT(
         REGEX(CEP__c ,&quot;^[0-9]*$&quot;))
    ,NOT(
         LEN(CEP__c)=8
        )
)</errorConditionFormula>
    <errorMessage>Campo CEP deve ser númerico, sem caracteres especiais e deve ter tamanho 8.</errorMessage>
</ValidationRule>